# Mindscan-Admin

./: .gitignore  LICENSE  docker-compose.yml  package-lock.json
.github/workflows/: admin-rs-build.yml  admin-rs-test.yml  admin-ts-build.yml  contracts-info-build.yml  contracts-info-test.yml  token-info-extractor-build.yml
admin-rs/: .dockerignore  Cargo.toml  docker-compose-db.yml  justfile
admin-rs/admin-core/: Cargo.toml
admin-rs/admin-core/src/: client.rs  lib.rs  test_helpers.rs
admin-rs/admin-core/src/submissions/: create.rs  get.rs  list.rs  mod.rs  types.rs  update.rs
admin-rs/admin-entity/: Cargo.toml
admin-rs/admin-entity/src/: lib.rs  prelude.rs  rejected_submissions.rs  sea_orm_active_enums.rs  submissions.rs  users.rs  users_chains.rs  waiting_for_update_submissions.rs
admin-rs/admin-migration/: Cargo.toml  Dockerfile
admin-rs/admin-migration/src/: initial_down.sql  initial_up.sql  lib.rs  m20220101_000001_create_table.rs  m20230517_124955_insert_default_admin.rs  m20230808_151142_add_delete_cascade_subm.rs
admin-rs/admin-proto/: Cargo.toml  build.rs
admin-rs/admin-proto/proto/: admin.proto  api_config_http.yaml  health.proto
admin-rs/admin-proto/src/: lib.rs
admin-rs/admin-proto/swagger/: admin.swagger.yaml
admin-rs/admin-server/: Cargo.toml  Dockerfile
admin-rs/admin-server/src/: contracts_info.rs  lib.rs  main.rs  server.rs  settings.rs  types.rs
admin-rs/admin-server/src/services/: admin.rs  health.rs  mod.rs
admin-rs/admin-server/tests/: submissions.rs
admin-rs/admin-server/tests/helpers/: contracts_info.rs  db.rs  mod.rs  server.rs
admin-rs/config/: networks.json  selectors.json
admin-ts/: .dockerignore  .env.example  Dockerfile  README.md  justfile  package.json  tsconfig.json
admin-ts/.adminjs/: .entry.js
admin-ts/config/: networks.json  networks.prod.json
admin-ts/prisma/: admin-schema.prisma  contracts-info.prisma
admin-ts/public/styles/: global.css
admin-ts/src/: auth.ts  chain_id.ts  components.ts  contracts_info.ts  fields.ts  handlers.ts  index.ts  networks.ts  permissions.ts  request.ts  utils.ts  validators.ts
admin-ts/src/components/: change-password.tsx  dashboard.tsx  disabled-edit-text.tsx  duplicate.tsx  image-property.tsx  project-sector.tsx  reject-submission.tsx  require-update.tsx  url-property.tsx
admin-ts/src/components/chain-id/: list.tsx  select.tsx  show.tsx
admin-ts/src/components/chain-ids/: filter.tsx  list.tsx  select.tsx  show.tsx
admin-ts/src/components/icon-url/: edit.tsx
admin-ts/src/components/status/: list.tsx  show.tsx  status-propery-value.tsx
admin-ts/src/models/: admin.model.ts  contracts_info.model.ts  index.ts
admin-ts/src/resources/: index.ts  submissions.resource.ts  super_submissions.resource.ts  todo_submissions.resource.ts  token_info.resource.ts  users.ts  verified_address.resource.ts
contracts-info/: Cargo.toml  docker-compose-db.yml  justfile
contracts-info/config/: networks.prod.json
contracts-info/contracts-info-core/: Cargo.toml
contracts-info/contracts-info-core/src/: blockscout.rs  client.rs  errors.rs  lib.rs
contracts-info/contracts-info-core/src/handlers/: mod.rs  token_info.rs  verified_address.rs
contracts-info/contracts-info-core/src/verify/: mod.rs  ownership.rs  validate.rs
contracts-info/contracts-info-entity/: Cargo.toml
contracts-info/contracts-info-entity/src/: lib.rs  prelude.rs  token_infos.rs  verified_addresses.rs
contracts-info/contracts-info-migration/: Cargo.toml  Dockerfile
contracts-info/contracts-info-migration/src/: lib.rs  m20220101_000001_create_table_verified_addresses.rs  m20230219_002735_create_table_token_infos.rs  m20230411_125010_add_token_name.rs  m20230412_110103_add_token_symbol.rs  m20230510_091802_add_is_user_submitted.rs  m20230922_130122_token_infos_add_token_name.rs  m20230922_130123_token_infos_add_token_symbol.rs
contracts-info/contracts-info-proto/: Cargo.toml  build.rs
contracts-info/contracts-info-proto/proto/: api_config_http.yaml  contracts_info.proto  health.proto
contracts-info/contracts-info-proto/src/: lib.rs
contracts-info/contracts-info-proto/swagger/: contracts_info.swagger.yaml
contracts-info/contracts-info-server/: Cargo.toml  Dockerfile
contracts-info/contracts-info-server/src/: lib.rs  main.rs  proto.rs  server.rs  settings.rs  types.rs
contracts-info/contracts-info-server/src/clients/: api_key_auth.rs  blockscout_auth.rs  mod.rs
contracts-info/contracts-info-server/src/services/: contracts_info.rs  contracts_info_validators.rs  mod.rs
contracts-info/contracts-info-server/tests/: token_infos.rs  verified_addresses.rs
contracts-info/contracts-info-server/tests/helpers/: database_helpers.rs  mod.rs  server_initializer.rs
contracts-info/token-info-extractor/: Cargo.toml  Dockerfile  docker-compose.yml
contracts-info/token-info-extractor-entity/: Cargo.toml
contracts-info/token-info-extractor-entity/src/: lib.rs  prelude.rs  token_info.rs
contracts-info/token-info-extractor-migration/: Cargo.toml
contracts-info/token-info-extractor-migration/src/: lib.rs  m20220101_000001_create_token_info_table.rs
contracts-info/token-info-extractor/abis/: tkn_eth.json
contracts-info/token-info-extractor/config/: networks.json
contracts-info/token-info-extractor/src/: contracts_info.rs  lib.rs  main.rs  settings.rs  token_info.rs
contracts-info/token-info-extractor/src/extractors/: coin_gecko.rs  mod.rs  tns.rs  trust_wallet.rs
