[package]
name = "admin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
admin-entity = { path = "../admin-entity" }

anyhow = "1.0"
blockscout-display-bytes = "1.0.0"
reqwest = "0.11"
sea-orm = "0.11"
serde = "1"
serde_json = "1"
thiserror = "1.0"
tokio = "1"
url = "2.3"
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]

lazy_static = "1.4"
pretty_assertions = "1.2"
admin-migration = { path = "../admin-migration" }
sea-orm-migration = { version = "0.11", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }