[package]
name = "admin-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
admin-proto = { path = "../admin-proto" }
admin-core = { path = "../admin-core" }
admin-migration = { path = "../admin-migration" }
blockscout-auth = { git = "https://github.com/blockscout/blockscout-rs", rev = "f5b8688" }

actix-web = "4.3"
anyhow = "1.0"
async-trait = "0.1"
blockscout-display-bytes = "1.0"
blockscout-service-launcher = "0.7.1"
config = "0.13"
cookie = {version = "0.17", features = ["percent-encode"]}
sea-orm = "0.11"
serde = "1.0"
serde_json = "1"
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
tonic = "0.8"
tracing = "0.1"
url = { version = "2.3", features = [ "serde" ] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
chrono = {version = "0.4", features = ["serde"]}

[dev-dependencies]
admin-entity = { path = "../admin-entity" }
rand = "0.8"
pretty_assertions = "1.3"
tempfile = "3.4.0"
wiremock = "0.5"
