[package]
name = "contracts-info-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts-info-entity = { path = "../contracts-info-entity" }
blockscout-display-bytes = "1.0.0"
bytes = "1.4"
sea-orm = "0.11"
thiserror = "1.0"
chrono = "0.4"
ethers = "1.0"
sscanf = "0.4"
reqwest = "0.11"
url = "2.3"
serde = "1"
serde_with = "2.2"
tracing = "0.1"
serde_json = "1.0"
futures = "0.3.26"

[dev-dependencies]
contracts-info-migration = { path = "../contracts-info-migration" }
sea-orm = { version = "*", features = ["sqlx-sqlite"] }
pretty_assertions = "1.3"
httpmock = "0.6"
rand = "0.8"
rstest = "0.16"
tokio = { version = "1", features = ["macros"] }
