[package]
name = "contracts-info-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-prost = { git = "https://github.com/blockscout/actix-prost", rev = "e0856613" }
actix-prost-macros = { git = "https://github.com/blockscout/actix-prost", rev = "e0856613"  }
prost = "0.11"
serde = "1.0"
serde_with = "2.0"
tonic = "0.8"

[build-dependencies]
actix-prost-build = { git = "https://github.com/blockscout/actix-prost", rev  = "e0856613" }
prost-build = "0.11"
tonic-build = "0.8"
