[package]
name = "contracts-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts-info-core = { path = "../contracts-info-core" }
contracts-info-proto = { path = "../contracts-info-proto" }
contracts-info-migration = { path = "../contracts-info-migration" }

actix-web = "4.3"
anyhow = "1.0"
async-trait = "0.1"
blockscout-auth = { git = "https://github.com/blockscout/blockscout-rs", rev = "f5b8688" }
blockscout-display-bytes = "1.0"
blockscout-service-launcher = "0.7.1"
config = "0.13"
sea-orm = "0.11"
serde = "1.0"
tokio = { version = "1.23", features = [ "rt-multi-thread", "macros" ] }
tonic = "0.8"
url = { version = "2.3", features = [ "serde" ] }
tracing = "0.1"
reqwest = "0.11"

[dev-dependencies]
contracts-info-entity = { path = "../contracts-info-entity" }

chrono = "0.4"
const_format = "0.2"
ethers = "1.0.0"
md5 = "0.7.0"
rand = "0.8"
rstest = "0.16.0"
serde_json = "1.0.94"
tracing = "0.1"
wiremock = "0.5.17"
