[package]
name = "token-info-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts-info-proto = { path = "../contracts-info-proto" }
token-info-extractor-entity = { path = "../token-info-extractor-entity" }
token-info-extractor-migration = { path = "../token-info-extractor-migration" }

anyhow = "1.0.71"
async-trait = "0.1.68"
bincode = "1.3.3"
blockscout-service-launcher = { version = "0.9.0", features = ["database-0_11"] }
config = "0.13.3"
ethers = "2.0.0"
git2 = "0.17.1"
reqwest = "0.11.17"
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
sea-orm = "0.11.3"
sea-orm-migration = "0.11.3"
semver = "1.0.17"
serde = "1.0.162"
serde_json = "1.0"
sha3 = "0.10.8"
tempdir = "0.3.7"
tokio = { version = "1.28.0", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ]}
url = { version = "2.3", features = [ "serde" ] }

[dev-dependencies]
pretty_assertions = "1.3.0"